Bug 153172 - Options > Charts > Default Colors are no longer persistent in the preview since LO 7.4, and not even used since LO 7.5
Summary: Options > Charts > Default Colors are no longer persistent in the preview sin...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Chart (show other bugs)
Version:
(earliest affected)
7.4.0.3 release
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.6.0 target:7.5.2 target:7.4.6
Keywords: bibisected, bisected, regression
: 153865 (view as bug list)
Depends on:
Blocks: Options-Dialog
  Show dependency treegraph
 
Reported: 2023-01-24 00:48 UTC by jonathon
Modified: 2023-02-28 08:53 UTC (History)
7 users (show)

See Also:
Crash report or crash signature:


Attachments
screenshot LibO.7.5. Data Colours (263.23 KB, image/jpeg)
2023-01-24 01:02 UTC, jonathon
Details
Screenshot LibO 7.3.7.2 (113.94 KB, image/png)
2023-01-24 01:04 UTC, jonathon
Details

Note You need to log in before you can comment on or make changes to this bug.
Description jonathon 2023-01-24 00:48:13 UTC
Description:
CF https://i.imgur.com/fJZuiF4.png  For LibreOffice 7.5.0.2 screenshot
CF https://imgur.com/zUAyHiP.png for LibreOffice 7.3.7.2 screenshot

For the LibO 7.5.0.2 screenshot the bar chart is what I expected to see after changing the default colours.
Chart Default Colours shows what LibO 7.5.0.2 claims I changed the colours to.

For the LibO 7.3.7.2 screenshot, the bar chart displays the default colours, not the colours I selected.
Chart Default Colours shows the colour palette I selected the colours from.  
Deta Series 1 is the first colour on the palette
Data Series 44 is the last colour on the palette

Both 7.3.x and 7.5.x remove Data Series 13 and higher.


Steps to Reproduce:
1 Go to ">Tools >Options >Charts >Default Colors"
2. Select a colour palette
3.Click on "Data Series 1" then click on a colour in the palette
4. The colour you clicked on shows up in the "chart colors Data Series 1" space.
5. Click on the "Apply " button
6: Watch the colour block in Data Series 1 change back to the original colour.

Actual Results:
Data Series Colors revert back to the default setup.
Data Series are reduced back to 12 colours.

Expected Results:
Data Series Colours should retain the colour I selected.
Data Series Colours should retain all of the Data Series Chart Numbers I added.


Reproducible: Always


User Profile Reset: Yes

Additional Info:
stephane.guillou says that it is a regression to LibreOffice 6.1

I'm using 
Version: 7.5.0.2 (X86_64) / LibreOffice Community
Build ID: c0dd1bc3f1a385d110b88e26ece634da94921f58
CPU threads: 4; OS: Linux 5.10; UI render: default; VCL: gtk3
Locale: en-ZA (en_NZ.UTF-8); UI: en-ZA
Calc: threaded

and also tested on
Version: 7.3.7.2 / LibreOffice Community
Build ID: e114eadc50a9ff8d8c8a0567d6da8f454beeb84f
CPU threads: 4; OS: Linux 5.10; UI render: default; VCL: gtk3
Locale: en-ZA (en_NZ.UTF-8); UI: en-ZA
Calc: threaded
Comment 1 jonathon 2023-01-24 01:02:54 UTC
Created attachment 184857 [details]
screenshot LibO.7.5. Data Colours

This is the same image as https://i.imgur.com/fJZuiF4.png
Comment 2 jonathon 2023-01-24 01:04:29 UTC
Created attachment 184858 [details]
Screenshot LibO 7.3.7.2

This is the same image as https://imgur.com/zUAyHiP.png
Comment 3 raal 2023-01-24 06:13:06 UTC
Can you share your test file?
Comment 4 Heiko Tietze 2023-01-24 06:38:09 UTC
Miklos, is this a fall-out from bug 151900?
Comment 5 stragu 2023-01-24 08:59:22 UTC
(In reply to jonathon from comment #0)

> Additional Info:
> stephane.guillou says that it is a regression to LibreOffice 6.1
> 

I confirmed that it was a regression by checking an older version, but just now tested further with the following steps:

1. Open Writer
2. Tools > Options > Charts > Default colors: change first colour to something recognisable, click OK
2. Insert > Chart

Th situation is a bit more complex:
- LO 7.0.6.2 works as expected.
- LO 7.1.8.1, 7.2.7.2, 7.3.7.2 do not show the currently selected colours in the Options dialog's list, but it they do save and use them in new charts.
- LO 7.4.4.2 brings back the colour previews in the list, but applying a new one and clicking "apply" or "OK" resets the *previews* to the original. New charts *still use* the colours the user selected.
- LO 7.5.0.2 also shows colour previews in the list while losing them on applying. But on top of that: applying actually resets it to the default palette, as can be seen when inserting a new chart.

So there has been some progressive degradation over the versions. As the colour preview is back, I'm going to call that a double-regression that start in 7.4.

I will bibisect later today.
Comment 6 stragu 2023-01-24 10:11:50 UTC
(In reply to Stéphane Guillou (stragu) from comment #5)
> - LO 7.4.4.2 brings back the colour previews in the list, but applying a new
> one and clicking "apply" or "OK" resets the *previews* to the original. New
> charts *still use* the colours the user selected.
> - LO 7.5.0.2 also shows colour previews in the list while losing them on
> applying. But on top of that: applying actually resets it to the default
> palette, as can be seen when inserting a new chart.

I got that wrong. There's only one regression: 7.4.4.2 already resets to the default palette in both the preview and new charts.

Bibisected with linux-64-7.4 repo to first bad commit 8f81bfacdee01688ac8c7b615f844580bb36f066, which points to core commit:

commit 6b9837ebe40b44bdd6e5940b9a5a457cb350c546
author	Noel Grandin <noelgrandin@gmail.com>	Mon Jun 20 19:17:00 2022 +0200
committer	Xisco Fauli <xiscofauli@libreoffice.org>	Tue Jun 21 10:07:15 2022 +0200
tree 0862186fb4cee25f7a3071ca98c6663e6cabbfeb
parent 37b30be41d24c3659dbf64b46c490e94869fca7f
tdf#58134 Reset Button in Options Dialogs
fixed a couple of these.
Change-Id: Ibef29afee1d702af2812996093deb7204c74e32c
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/136195
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
(cherry picked from commit b95142c11e80c58b70dff68bfd7f3792657b9ee2)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/136167

...which touched /cui/source/options/optchart.cxx.
Noel, can you please have a look?
Comment 7 Commit Notification 2023-02-15 12:08:23 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/9d6c5f13ff031c18d3c117e4de212e2550d24e8c

tdf#153172 Options > Charts > Default Colors no longer persistent

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2023-02-15 14:31:57 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/ba52bd3c43ab786224f4bf24be1a140a7c3bb536

tdf#153172 Options > Charts > Default Colors no longer persistent

It will be available in 7.5.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2023-02-15 16:08:25 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/ffed1616ef4da1248ac64559064d014aa028467b

tdf#153172 Options > Charts > Default Colors no longer persistent

It will be available in 7.4.6.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 stragu 2023-02-28 08:45:04 UTC
*** Bug 153865 has been marked as a duplicate of this bug. ***
Comment 11 stragu 2023-02-28 08:53:40 UTC
Verified the fix in:

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 508a610808631bc292a8daf4f78bd8726b2d56be
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Thank you Jonathon and Noel!