tdf#153172 Options > Charts > Default Colors no longer persistent

regression from
    commit b95142c11e80c58b70dff68bfd7f3792657b9ee2
    Author: Noel Grandin <noelgrandin@gmail.com>
    Date:   Mon Jun 20 19:17:00 2022 +0200
    tdf#58134 Reset Button in Options Dialogs

Change-Id: Idef9880e29c322ae2d11641354baf8a241fc7fb0
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/147049
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>