cui/source/options/optchart.cxx
@@ -157,16 +157,7 @@ bool SvxDefaultColorOptPage::FillItemSet( SfxItemSet* rOutAttrs )
 
 void SvxDefaultColorOptPage::Reset( const SfxItemSet* )
 {
-    if( m_SvxChartColorTableUniquePtr )
-    {
-        m_SvxChartColorTableUniquePtr->useDefault();
-
-        FillBoxChartColorLB();
-
-        m_xLbChartColors->grab_focus();
-        m_xLbChartColors->select( 0 );
-        m_xPBRemove->set_sensitive(true);
-    }
+    m_xLbChartColors->select( 0 );
 }
 
 void SvxDefaultColorOptPage::FillPaletteLB()
